# todo-project

./: .env.example  .example.env  .gitignore  CLI.py  README.md  __init__.py  alembic.ini  config.py  core.py  docker-compose.yml  pyproject.toml  run_api.py  storage.py
alembic/: env.py
alembic/versions/: 4eda8dd7c2e8_initial_migration.py
app/: __init__.py  main.py  ports.py
app/api/: routers.py
app/api/controller_schemas/requests/: users_request_schema.py
app/api/controller_schemas/responses/: users_response_schema.py
app/api/controllers/: users_controller.py
app/cli/: __init__.py  __main__.py  menus.py  utils.py
app/commands/: __init__.py  autoclose_overdue.py  scheduler.py
app/config/: __init__.py  settings.py
app/core/: __init__.py  exceptions.py  models.py  models_legacy.py  validation.py
app/db/: __init__.py  base.py  session.py
app/exceptions/: __init__.py  base.py  repository_exceptions.py  service_exceptions.py
app/models/: __init__.py  project.py  task.py
app/repositories/: __init__.py  project_repository.py  task_repository.py
app/services/: __init__.py  project_service.py  task_service.py  todo_service.py
app/storage/: __init__.py  in_memory.py
postman/: postman_collection.json  postman_environment.json
